# pivotable

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
assets/: default.theme.css
examples/display/: Cargo.toml  Makefile  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
examples/display/assets/: activity.yml  default.theme.css
examples/display/src/: demo.rs  fetch.rs  main.rs
examples/display/src/config/: activity.yml
src/: builder.rs  demo.rs  errors.rs  logger.rs  main.rs
src/components/: button.rs  cell.rs  footer.rs  header.rs  mod.rs  multicheck.rs  selector.rs  table.rs
src/data/: json.rs  mod.rs  tyrell.rs
src/invoicer/: graph.rs  mod.rs  organization.rs
src/utils/: animations.rs  mod.rs
